--- a/rdtGsRaw.ui
+++ b/rdtGsRaw.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
+    <width>1220</width>
     <height>750</height>
    </rect>
   </property>
@@ -18,7 +18,7 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>1200</width>
+    <width>1220</width>
     <height>750</height>
    </size>
   </property>
@@ -379,8 +379,8 @@ padding: 10px;</string>
        <widget class="QGroupBox" name="moduleGroup">
         <property name="maximumSize">
          <size>
-          <width>360</width>
-          <height>59</height>
+          <width>370</width>
+          <height>58</height>
          </size>
         </property>
         <property name="styleSheet">
@@ -630,8 +630,8 @@ padding: 10px;</string>
        <widget class="QGroupBox" name="trackingGroup">
         <property name="maximumSize">
          <size>
-          <width>360</width>
-          <height>66</height>
+          <width>370</width>
+          <height>58</height>
          </size>
         </property>
         <property name="title">
@@ -644,8 +644,15 @@ padding: 10px;</string>
          <property name="verticalSpacing">
           <number>0</number>
          </property>
-         <item row="1" column="2">
-          <widget class="QLabel" name="longcord">
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_36">
+           <property name="text">
+            <string>Latitude:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="4" alignment="Qt::AlignHCenter">
+          <widget class="QLabel" name="dist">
            <property name="text">
             <string>N/A</string>
            </property>
@@ -658,75 +665,14 @@ padding: 10px;</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="0">
-          <widget class="QLabel" name="label_36">
-           <property name="text">
-            <string>Latitude:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="4">
+         <item row="1" column="3">
           <widget class="QLabel" name="label_35">
            <property name="text">
             <string>Direction:</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
-          <spacer name="horizontalSpacer">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item row="0" column="6">
-          <widget class="QLabel" name="dist">
-           <property name="text">
-            <string>N/A</string>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="2">
-          <widget class="QLabel" name="latcord">
-           <property name="text">
-            <string>N/A</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="6">
-          <widget class="QLabel" name="direc">
-           <property name="text">
-            <string>N/A</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="5">
-          <spacer name="horizontalSpacer_4">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item row="0" column="4">
-          <widget class="QLabel" name="label_34">
-           <property name="text">
-            <string>Distance:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="3">
           <spacer name="verticalSpacer_4">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -738,6 +684,34 @@ padding: 10px;</string>
             </size>
            </property>
           </spacer>
+         </item>
+         <item row="1" column="1" alignment="Qt::AlignHCenter">
+          <widget class="QLabel" name="longcord">
+           <property name="text">
+            <string>N/A</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="4" alignment="Qt::AlignHCenter">
+          <widget class="QLabel" name="direc">
+           <property name="text">
+            <string>N/A</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="3">
+          <widget class="QLabel" name="label_34">
+           <property name="text">
+            <string>Distance:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1" alignment="Qt::AlignHCenter">
+          <widget class="QLabel" name="latcord">
+           <property name="text">
+            <string>N/A</string>
+           </property>
+          </widget>
          </item>
         </layout>
        </widget>
@@ -851,8 +825,8 @@ padding: 10px;</string>
        <widget class="QLabel" name="trackerimg">
         <property name="minimumSize">
          <size>
-          <width>357</width>
-          <height>357</height>
+          <width>370</width>
+          <height>370</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -917,7 +891,7 @@ padding: 10px;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1200</width>
+     <width>1220</width>
      <height>21</height>
     </rect>
    </property>
