--- a/rdtGsRaw.ui
+++ b/rdtGsRaw.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1220</width>
-    <height>750</height>
+    <height>815</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,7 +19,7 @@
   <property name="minimumSize">
    <size>
     <width>1220</width>
-    <height>750</height>
+    <height>815</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -40,19 +40,6 @@
     </sizepolicy>
    </property>
    <layout class="QGridLayout" name="gridLayout_7">
-    <item row="0" column="1" colspan="3">
-     <spacer name="horizontalSpacer_6">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
     <item row="1" column="2">
      <layout class="QGridLayout" name="gridLayout_3">
       <property name="sizeConstraint">
@@ -310,6 +297,19 @@ padding: 10px;</string>
       </item>
      </layout>
     </item>
+    <item row="1" column="0">
+     <spacer name="verticalSpacer_3">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
     <item row="1" column="1">
      <layout class="QGridLayout" name="gridLayout_9">
       <property name="sizeConstraint">
@@ -363,6 +363,32 @@ padding: 10px;</string>
       </item>
      </layout>
     </item>
+    <item row="1" column="4">
+     <spacer name="verticalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="0" column="1" colspan="3">
+     <spacer name="horizontalSpacer_6">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
     <item row="1" column="3">
      <layout class="QGridLayout" name="gridLayout_8">
       <property name="sizeConstraint">
@@ -377,10 +403,16 @@ padding: 10px;</string>
       </item>
       <item row="0" column="0" colspan="2">
        <widget class="QGroupBox" name="moduleGroup">
-        <property name="maximumSize">
+        <property name="minimumSize">
          <size>
           <width>370</width>
           <height>58</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>16777215</height>
          </size>
         </property>
         <property name="styleSheet">
@@ -496,10 +528,16 @@ padding: 10px;</string>
       </item>
       <item row="1" column="0">
        <widget class="QGroupBox" name="avionicsGroup">
-        <property name="maximumSize">
+        <property name="minimumSize">
          <size>
           <width>190</width>
           <height>130</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>16777215</height>
          </size>
         </property>
         <property name="title">
@@ -617,7 +655,7 @@ padding: 10px;</string>
        <widget class="QPushButton" name="armBut">
         <property name="minimumSize">
          <size>
-          <width>75</width>
+          <width>0</width>
           <height>0</height>
          </size>
         </property>
@@ -628,10 +666,16 @@ padding: 10px;</string>
       </item>
       <item row="2" column="0" colspan="2">
        <widget class="QGroupBox" name="trackingGroup">
-        <property name="maximumSize">
+        <property name="minimumSize">
          <size>
           <width>370</width>
           <height>58</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>16777215</height>
          </size>
         </property>
         <property name="title">
@@ -718,10 +762,16 @@ padding: 10px;</string>
       </item>
       <item row="1" column="1">
        <widget class="QGroupBox" name="telemetryGroup">
-        <property name="maximumSize">
+        <property name="minimumSize">
          <size>
           <width>164</width>
           <height>130</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>16777215</height>
          </size>
         </property>
         <property name="title">
@@ -825,8 +875,8 @@ padding: 10px;</string>
        <widget class="QLabel" name="trackerimg">
         <property name="minimumSize">
          <size>
-          <width>370</width>
-          <height>370</height>
+          <width>432</width>
+          <height>432</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -856,32 +906,6 @@ padding: 10px;</string>
        </widget>
       </item>
      </layout>
-    </item>
-    <item row="1" column="0">
-     <spacer name="verticalSpacer_3">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>40</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="1" column="4">
-     <spacer name="verticalSpacer_2">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>40</height>
-       </size>
-      </property>
-     </spacer>
     </item>
    </layout>
   </widget>
